--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,13 +8,8 @@
   <title>Welcome to the Colony</title>
 
   <!--<link rel="stylesheet" href="css/bootstrap.min.css" media="screen" type="text/css"/>-->
-    <link rel="stylesheet" href="css/bootstrap.min.css" media="screen" type="text/css"/>
-
+  <link rel="stylesheet" href="css/style.css" media="screen" type="text/css"/>
     <!--<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,700">-->
-
-    <!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
- <![endif]-->
 
   </head>
 
@@ -31,7 +26,6 @@
 
         <form action="#" th:action="@{/login}" method="post">
 
-          <fieldset class="">
             <!--podpięcie bootstrapa rozsypuje układ formularza-->
             <div class="col-xs-15">
               <div>
@@ -51,13 +45,12 @@
               <input type="***REMOVED***word"  name="***REMOVED***word" placeholder="******"></p>
             <p><input type="submit" value="_to the hive"></p>
 
-          </fieldset>
 
         </form>
 
         <p>Not a bee? <a href="#">Join the swarm now</a><span class="fontawesome-arrow-right"></span></p>
 
-      </div> <!-- end home -->
+      </div> 
 
     </div>
 
