--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,6 +10,7 @@
   <!--<link rel="stylesheet" href="css/bootstrap.min.css" media="screen" type="text/css"/>-->
   <link rel="stylesheet" href="css/style.css" media="screen" type="text/css"/>
     <!--<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,700">-->
+  <link rel="stylesheet" href="css/fontawesome.min.css" media="screen" type="text/css"/>
 
   </head>
 
@@ -50,7 +51,7 @@
 
         <p>Not a bee? <a href="#">Join the swarm now</a><span class="fontawesome-arrow-right"></span></p>
 
-      </div> 
+      </div>
 
     </div>
 
