--- a/src/main/resources/templates/db.html
+++ b/src/main/resources/templates/db.html
@@ -1,10 +1,90 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Behive list | Colony</title>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
 </head>
+
 <body>
-Database access
+
+<div class="container-fluid">
+
+    <h3>Colony. Swarm management system</h3>
+    <hr>
+    <h4>Beehives within the colony</h4>
+    <hr>
+    <div>
+        <form th:action="@{/logout}" method="post">
+            <input type="submit" class="btn btn-danger btn-sm mb-3" value="Logout"/>
+        </form>
+    </div>
+    <!-- ADD BUTTON -->
+    <a th:href="@{/showAddForm}" class="btn btn-primary btn-sm mb-3">New beehive</a>
+    <!-- ALL CONTRACTS BUTTON -->
+    <a th:href="@{/db}" class="btn btn-secondary btn-sm mb-3">All beehives</a>
+    <!-- ACTIVE ONLY BUTTON -->
+    <a th:href="@{/listNucs}" class="btn btn-secondary btn-sm mb-3">Nucs only</a>
+    <!-- SOFTWARE LIST BUTTON -->
+    <a th:href="@{/queenList}" class="btn btn-secondary btn-sm mb-3">Queens</a>
+    <!-- DATATABLES VIEW -->
+    <a th:href="@{/datatable}" class="btn btn-dark btn-sm mb-3">Datatable view</a>
+    <!-- ABOUT BUTTON -->
+    <a th:href="@{/about}" class="btn btn-outline-dark btn-sm mb-3">About</a>
+    <!-- TABLE -->
+    <table class="table table-bordered table-striped">
+        <thead>
+        <tr>
+            <th>Beehive ID</th>
+            <th>Colour</th>
+            <th>Breed</th>
+            <th>Queen</th>
+            <th>Start date</th>
+            <th>End date</th>
+            <th>Numbers</th>
+            <th>Nuc</th>
+        </tr>
+        </thead>
+
+        <tbody>
+        <tr th:each="tempBeehive : ${beehives}">
+
+            <td th:text="${tempBeehive?.id}"/>
+            <td th:text="${tempBeehive?.colour}"/>
+            <td th:text="${tempBeehive?.breed}"/>
+            <td th:text="${tempBeehive?.queen?.marking}"/>
+            <td th:text="${tempBeehive?.startDate}" />
+            <td th:text="${tempBeehive?.endDate}" />
+            <td th:text="${tempBeehive?.numbers}" />
+            <td th:text="${tempBeehive?.nuc}" />
+
+            <!--<td>
+                <a th:href="@{/showUpdateForm(id=${tempContract.id})}"
+                   class="btn btn-info btn-sm">
+                    Update
+                </a>
+                <a th:href="@{/disable(id=${tempContract.id})}"
+                   class="btn btn-info btn-sm" onclick="if (!(confirm('Disable for sure?'))) return false">
+                    Disable
+                </a>
+                <a th:href="@{/systemDetails(id=${tempContract.id})}"
+                   class="btn btn-outline-info btn-sm">
+                    Details
+                </a>
+                <a th:href="@{/delete(id=${tempContract.id})}"
+                   class="btn btn-danger btn-sm" onclick="if (!(confirm('Delete for sure?'))) return false">
+                    Delete
+                </a>
+            </td>-->
+
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
+
+
+
