--- a/src/main/resources/templates/db.html
+++ b/src/main/resources/templates/db.html
@@ -4,6 +4,7 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
 <head>
+    <meta charset="UTF-8">
     <title>Behive list | Colony</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
 </head>
@@ -31,8 +32,8 @@
     <a th:href="@{/queenList}" class="btn btn-secondary btn-sm mb-3">Queens</a>
     <!-- DATATABLES VIEW -->
     <a th:href="@{/datatable}" class="btn btn-dark btn-sm mb-3">Datatable view</a>
-    <!-- ABOUT BUTTON -->
-    <a th:href="@{/about}" class="btn btn-outline-dark btn-sm mb-3">About</a>
+    <!-- MENU BUTTON -->
+    <a th:href="@{/menu}" class="btn btn-outline-dark btn-sm mb-3">Main menu</a>
     <!-- TABLE -->
     <table class="table table-bordered table-striped">
         <thead>
