--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -32,8 +32,8 @@
             <img th:src="@{/svg/person.svg}" alt="author icon" class="icon">
             <div class="media-body">
                 <h5 class="mt-0 mb-1">Author</h5>
-                ***REMOVED*** Dejmit. 10 years of hard-core experience in world-wide e-commerce industry :).
-                Self-thaught programmer since 3 years. Plus more than one year of learning & freelancing in Java.
+                10 years of hard-core experience in world-wide e-commerce industry :).
+                Self-taught programmer since 3 years. Plus more than one year of learning & freelancing in Java.
                 After hours: beekeeper and storm chaser.
             </div>
         </li>
@@ -41,7 +41,7 @@
             <img th:src="@{/svg/phone.svg}" alt="contact icon" class="icon">
             <div class="media-body">
                 <h5 class="mt-0 mb-1">Contact</h5>
-                Your feedback is very welcome! Please contact me at: <b>dejmit***REMOVED*** [at] gmail [dot] com</b>
+                Your feedback is very welcome! Please contact me at: <b>dejmit [at] gmail [dot] com</b>
             </div>
         </li>
     </ul>
