--- a/src/main/resources/templates/beehive-form.html
+++ b/src/main/resources/templates/beehive-form.html
@@ -43,7 +43,7 @@
         <small id="disable" class="form-text text-muted">You can also edit this field using NUC
             button</small>
         <br><br>
-        <!-- hidden values for Queen entity - not to be updated by the ***REMOVED*** -->
+        <!-- hidden values for Queen entity - not to be updated by the user -->
         <!--<input th:if="${beehive?.queen?.id != null}" type="hidden" th:field="*{queen.id}" />-->
         <input th:if="${beehive?.queen?.breed != null}" type="hidden"
                th:field="*{queen.breed}" />
