--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,8 +30,8 @@
 
             <div class="col-xs-15">
                 <div>
-                    <div th:if="${loginError}" class="alert alert-danger ol-xs-offset-1 col-xs-10">Invalid ***REMOVED*** or
-                        ***REMOVED***word!
+                    <div th:if="${loginError}" class="alert alert-danger ol-xs-offset-1 col-xs-10">Invalid user or
+                        password!
                     </div>
                 </div>
             </div>
@@ -43,9 +43,9 @@
                 </div>
             </div>
             <p><span class="fab fa-forumbee"></span>
-                <input type="text" name="***REMOVED***name" placeholder="Who are you?"></p>
+                <input type="text" name="username" placeholder="Who are you?"></p>
             <p><span class="fas fa-lock"></span>
-                <input type="***REMOVED***word" name="***REMOVED***word" placeholder="******"></p>
+                <input type="password" name="password" placeholder="******"></p>
             <p><input type="submit" value="_to the hive"></p>
 
 
