--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -32,7 +32,7 @@
 <hr>
 <div style="text-align: center">
     <span sec:authorize="isAuthenticated()">
-                &COPY; 2019 by ***REMOVED*** Fioletowy | Logged ***REMOVED***: <span sec:authentication="name"></span> |
+                &COPY; 2019 by Kot Fioletowy | Logged user: <span sec:authentication="name"></span> |
                 Roles: <span sec:authentication="authorities"></span> |
                 <a th:href="@{/logout}">Log Out</a>
             </span>
