--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>About Colony</title>
+    <title>About BXF</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
     <link rel="stylesheet" th:href="@{/css/custom.css}"/>
 
@@ -12,11 +12,11 @@
 
 <div class="container">
 
-    <h3>Colony | Swarm Management System</h3>
+    <h3>BXF | Swarm Management System</h3>
     <hr>
     <h4>About</h4>
     <hr>
-    <h5 class="button-center">Welcome to the Colony</h5>
+    <h5 class="button-center">Welcome to the Swarm</h5>
     <ul class="list-group list-group-flush">
         <li class="media">
             <img th:src="@{/svg/terminal.svg}" alt="software icon" class="icon">
