--- a/src/main/resources/templates/contract-form.html
+++ b/src/main/resources/templates/contract-form.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container">
-    <h3>Colony. Swarm management system</h3>
+    <h3>BXF. Swarm management system</h3>
     <hr>
     <h4>Beehive details</h4>
     <hr>
