--- a/src/main/resources/templates/datatable.html
+++ b/src/main/resources/templates/datatable.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Datatable | Colony</title>
+    <title>Datatable | BXF</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
     <script th:src="@{/js/jquery.js}"></script>
     <script th:src="@{/js/bootstrap.min.js}"></script>
@@ -15,7 +15,7 @@
 
 <div class="container-fluid">
 
-    <h3>Colony | Swarm Management System</h3>
+    <h3>BXF | Swarm Management System</h3>
     <hr>
     <h4>Datatable</h4>
     <hr>
