--- a/src/main/resources/templates/db.html
+++ b/src/main/resources/templates/db.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Behive list | Colony</title>
+    <title>Behive list | BXF</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
 </head>
 
@@ -13,7 +13,7 @@
 
 <div class="container-fluid">
 
-    <h3>Colony. Swarm management system</h3>
+    <h3>BXF. Swarm management system</h3>
     <hr>
     <h4>Beehives within the colony</h4>
     <hr>
