--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
 
-    <title>Welcome to the Colony</title>
+    <title>Welcome to the BXF</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css" media="screen" type="text/css"/>
     <link rel="stylesheet" href="css/style.css" media="screen" type="text/css"/>
@@ -17,7 +17,7 @@
 
 <body>
 <div id="header">
-    <h1 id="title">_COLONY</h1>
+    <h1 id="title">_BXF</h1>
     <p>swarm management system</p>
 </div>
 
