--- a/src/main/resources/templates/new-beehive-form.html
+++ b/src/main/resources/templates/new-beehive-form.html
@@ -3,12 +3,12 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Beehive form | Colony</title>
+    <title>Beehive form | BXF</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
 </head>
 <body>
 <div class="container">
-    <h3>Colony | Swarm Management Software</h3>
+    <h3>BXF | Swarm Management Software</h3>
     <hr>
     <h4>Beehive details</h4>
     <hr>
