--- a/src/main/resources/templates/queen-details.html
+++ b/src/main/resources/templates/queen-details.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Queen Details | Colony</title>
+    <title>Queen Details | BXF</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
 </head>
 
@@ -10,7 +10,7 @@
 
 <div class="container">
 
-    <h3>Colony | Swarm Management System</h3>
+    <h3>BXF | Swarm Management System</h3>
     <hr>
     <h4>Current queen details</h4>
     <hr>
