--- a/src/main/resources/templates/queen-list.html
+++ b/src/main/resources/templates/queen-list.html
@@ -4,7 +4,7 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
 <head>
-    <title>Queen list | Colony</title>
+    <title>Queen list | BXF</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
 </head>
 
@@ -12,7 +12,7 @@
 
 <div class="container-fluid">
 
-    <h3>Colony. Swarm management system</h3>
+    <h3>BXF. Swarm management system</h3>
     <hr>
     <h4>Queens within the colony</h4>
     <hr>
