--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
 
-    <title>Welcome to the Colony</title>
+    <title>Welcome to the Bee Experimental Facility</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" media="screen" type="text/css"/>
     <link rel="stylesheet" href="css/style.css" media="screen" type="text/css"/>
 
@@ -13,7 +13,7 @@
 
 <body>
 <div id="header">
-    <h1 id="title">_COLONY</h1>
+    <h1 id="title">_BEE EXPERIMENTAL FACILITY</h1>
     <p>swarm management system</p>
 </div>
 
@@ -23,7 +23,7 @@
     <br>
     <p th:text="'Now is ' + ${BeeDate} + ' year of the Bee Era.'"/>
     <br><br>
-    <a th:href="@{/menu}" class="btn btn-outline-secondary btn-lg">Enter the Colony</a>
+    <a th:href="@{/menu}" class="btn btn-outline-secondary btn-lg">Enter the BXF</a>
 
 
 </div>
